# aran-mbc3-swarm

./: .gitattributes  .gitignore  MBC3_MASTER.md  README.md  architecture.drawio  bugs.md  fly_demo.sh  isr_lidar_mpc.py  isr_lidar_pid.py  kill_drone.sh  launch.sh  mapping_3d.py  mission_config.py  pid_controller.py  record_demo.sh  record_single_drone.sh  scenarios.json  section_summarize.md  setup_ws.sh  swarm_launch.sh  telemetry_web.py
aeris10_driver/: package.xml  setup.cfg  setup.py
aeris10_driver/aeris10_driver/: aeris10_usb.py  driver_node.py
aeris10_driver/config/: aeris10_driver.yaml
aeris10_driver/launch/: aeris10_driver.launch.py
competition/: SUBMISSION_CHECKLIST.md  doc1_proposal.md  doc2_products_tech.md  doc3_competitions.md  doc4_additional.md  generate_docs_pdf.py  generate_proposal_pdf.py
docs/: CODING_RULES.md  FILE_STRUCTURE.md  bugs.md  d2d.md  drone_analysis.md  migration_ubuntu_laptop.md  section_summarize.md  session_handoff.md
images/: mbc3_architecture.drawio
meshes/: 10in_Prop_CW.dae
new_drone/: 10in_Prop_CW.step  install_px4_model.sh  mbc3_exact_v3.sdf  mbc3_radar_drone.sdf  mbc3_radar_drone.step  mbc3_radar_drone.xacro  mbc3_radar_drone_1.sdf  mbc3_redesign_v2.sdf  model.config  model.dae  model.sdf
radar_fusion/: package.xml  setup.cfg  setup.py  test_unit.py
radar_fusion/config/: radar_fusion.yaml
radar_fusion/launch/: radar_fusion.launch.py
radar_fusion/radar_fusion/: detection_node.py  fusion_node.py  kalman_tracker.py  rf_classifier.py
src/: asp_bridge.py  asp_fake_targets.py  d2d_node.py  isr_lidar_mpc.py  isr_lidar_pid.py  leader_election.py  mapping_3d.py  mission_ai.py  mission_config.py  mission_config_swarm.py  mpc_controller.py  radar_sim.py  scenarios.json  swarm_fly.py  (+4 more)
(+30 files in other folders)
