<?xml version="1.0"?>
<package format="3">
  <name>radar_fusion</name>
  <version>0.1.0</version>
  <description>MBC-3 radar detection, clustering and swarm fusion pipeline</description>
  <maintainer email="aranrobotics@gmail.com">Aran Technologies</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-joblib</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
